name:                lambdacoin
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Lignum/LambdaCoin
license:             MIT
license-file:        LICENSE
author:              Lignum
maintainer:          me@lignum.pw
copyright:           2018 Lignum
category:            Crypto
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Crypto.LambdaCoin
                     , Crypto.LambdaCoin.Transaction
                     , Crypto.LambdaCoin.Utils
  build-depends:       base >= 4.7 && < 5
                     , bifunctors >= 3.2
                     , binary >= 0.8
                     , bytestring >= 0.10
                     , saltine >= 0.1

library lambdacoin-sql
  hs-source-dirs:      sql
  default-language:    Haskell2010
  exposed-modules:     Crypto.LambdaCoin.SQL
                     , Crypto.LambdaCoin.SQL.Transaction
                     , Crypto.LambdaCoin.SQL.Utils
  build-depends:       base >= 4.7 && < 5
                     , lambdacoin
                     , binary >= 0.8
                     , bytestring >= 0.10
                     , mtl >= 2.2
                     , sqlite-simple >= 0.4

executable lambdacoin-cli
  hs-source-dirs:      cli
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , lambdacoin
                     , lambdacoin-sql
                     , mtl >= 2.2
                     , sqlite-simple >= 0.4
